# base2histogram

./: .gitignore  Cargo.toml  Makefile  README.md  accuracy.txt
docs/: README.md  algorithm.md  base2histogram-vs-ddsketch.md  base2histogram-vs-h2histogram.md  base2histogram-vs-heistogram.md
src/: lib.rs
src/histogram/: ascii_chart.rs  bucket_ref.rs  bucket_span.rs  compact_display.rs  cumulative_count.rs  density.rs  detailed_display.rs  display_buckets.rs  histogram.rs  interpolator.rs  log_scale.rs  log_scale_config.rs  mod.rs  series.rs  slot_queue.rs
tests/: basic_usage.rs  sliding_window.rs
